# steno

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: FUNDING.yml
models/: README.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs  transcribe.rs
